关于CPU程序员应该知道的那些事文章改webp格式为jpg格式

--- a/_posts/2018-2-8-关于CPU程序员应该知道的那些事.md
+++ b/_posts/2018-2-8-关于CPU程序员应该知道的那些事.md
@@ -20,17 +20,16 @@ add ecx, eax
 
 众所周知，现代计算机体系结构，存储有很多层次，各个层次硬件访问延迟存在数量级上的差异，越高的性能，往往意味着更高的成本和更小的容量。
 
-![cpu_cache.webp](http://ygjs-static-hz.oss-cn-beijing.aliyuncs.com/images/2018-2-8/cpu_cache.webp)
+![cpu_cache.webp](http://ygjs-static-hz.oss-cn-beijing.aliyuncs.com/images/2018-2-8/cpu_cache.jpg)
 
 第一条指令因为要访问内存，相比随后的寄存器访问指令可能要慢上百倍，如果CPU采用严格的串型执行方式，可能一条高延时的指令会block后面的低延时指令很长时间，CPU上强大的ALU（算术逻辑单元）在这时候没有用武之地，只能等着数据被加载进来。Intel在X86 CPU持续投入了30多年，直到今天成为芯片领域的老大，肯定不是吃干饭的, 从20年前I486开始就开始引入了如下图的指令流水线(Pipeline)架构：
 
 ![pipeline.png](http://ygjs-static-hz.oss-cn-beijing.aliyuncs.com/images/2018-2-8/pipeline.png)
 
-现代CPU都设计有多路(Port)执行单元, 有些执行单元专门用来处理ALU, 比如加，减等； 有些用来处理SIMD, 比如矩阵乘加等；
 
-指令会被加载到缓存，然后翻译成微指令，翻译完成后，它们会进入一个重排序缓存(Reorder Buffer, ROB)， 不同的微指令在不同的执行单元中同时执行，而且每个执行单元都全速运行。只要当前微指令所需要的数据就绪，而且有空闲的执行单元，微指令就可以立即执行，有时甚至可以跳过前面还未就绪的微指令。通过这种方式，需要长时间运行的操作不会阻塞后面的操作，流水线阻塞带来的损失被极大的减小了。
+指令先会被加载到缓存，然后翻译成微指令，翻译完成后，它们会进入一个重排序缓存(Reorder Buffer, ROB)， 不同的微指令在不同的执行单元中同时执行，而且每个执行单元都全速运行。只要当前微指令所需要的数据就绪，而且有空闲的执行单元，微指令就可以立即执行，有时甚至可以跳过前面还未就绪的微指令。通过这种方式，需要长时间运行的操作不会阻塞后面的操作，流水线阻塞带来的损失被极大的减小了。
 
-另外值得一提的是，由于Pipeline多路执行的机制，CPU每个Cycle不止执行一条指令，比如上面的Pipeline例子中，一共有6个Ports, 所以该CPU的理论IPC（Instruction Per Cycle）至少大于等于6，如果熟悉perf命令，我们可能会注意到类似下面输出的“insn per cycle”会大于1。
+现代CPU都设计有多路(Port)执行单元, 有些执行单元专门用来处理ALU, 比如加，减等； 有些用来处理SIMD, 比如矩阵乘加等；由于Pipeline多路执行的机制，CPU每个Cycle不止执行一条指令，比如上面的Pipeline例子中，一共有6个Ports, 所以该CPU的理论IPC（Instruction Per Cycle）至少大于等于6，如果熟悉perf命令，我们可能会注意到类似下面输出的“insn per cycle”会大于1。
 
 ```
 [root@hubei ~]# perf stat sleep 1
