添加四篇文章

--- a/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
+++ b/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
@@ -43,7 +43,51 @@ CentOS 7的云镜像默认用户是centos，没有提供默认密码，需要通
 yum install -y cloud-utils cloud-localds seed.img user-data meta-data
 ```
 **创建虚拟机**
-![](http://ygjs-static-hz.oss-cn-beijing.aliyuncs.com/images/2018-1-17/28.jpg)
+```
+<domain type='kvm'>
+    <name>centos-cloud</name>
+    <memory>1048576</memory>
+    <currentMemory>1048576</currentMemory>
+    <vcpu>1</vcpu>
+    <os>
+        <type arch='x86_64' machine='pc'>hvm</type>
+        <boot dev='hd'/>
+    </os>
+    <features>
+        <acpi/>
+        <apic/>
+        <pae/>
+    </features>
+    <clock offset='localtime'/>
+    <on_poweroff>destroy</on_poweroff>
+    <on_reboot>restart</on_reboot>
+    <on_crash>destroy</on_crash>
+    <devices>
+        <emulator>/usr/libexec/qemu-kvm</emulator>
+        <disk type='file' device='disk'>
+            <driver name='qemu' type='qcow2'/>
+            <source file='/home/images/centos-cloud.img'/>
+            <target dev='vda' bus='virtio'/>
+        </disk>
+        <disk type='file' device='cdrom'>
+            <source file='/home/images/seed.iso'/>
+            <target dev='hda' bus='ide'/>
+        </disk>
+        <interface type='bridge'>
+            <source bridge='br0'/>
+            <mac address="00:16:3e:5d:aa:19"/>
+            <model type='virtio'/>
+            <driver name='vhost'/>
+         </interface>
+        <input type ='tablet' bus='usb'/>
+        <memballoon model='virtio' autodeflate='off'/>
+        <serial type="file">
+            <source path="/var/log/centos-cloud-serial.log"/>
+        </serial>
+        <graphics type='vnc' port='-1' autoport='yes' listen = '0.0.0.0' keymap='en-us'/>
+    </devices>
+ </domain>
+```
 
 **cloud init配置日志**
 用virsh create centos.xml启动虚拟机，该虚拟机的console日志会在/var/log/centos-cloud-serial.log文件中，虚拟机一般启动速度在5秒内就可以完成，在login界面出现后，会看到cloud-init的配置输出，然后就可以用ssh key登录这个虚拟机了。
