修改两篇文章到前端技术目录

--- a/_posts/2018-1-16-Caddy-部署实践.md
+++ b/_posts/2018-1-16-Caddy-部署实践.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: Caddy 部署实践
-categories: caddy
-tags: [Golang]
+tags: [前端技术]
 ---
 
 > TL'DR [Caddy](https://caddyserver.com/) 就是用 Go 语言实现的一款 Web 服务器
