修改所有文章格式

--- a/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
+++ b/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
@@ -19,12 +19,14 @@ tags: [云计算]
 cloud.centos.org可以获得最新的云镜像，建议下载qcow2.xz格式，下载完后用unxz命令解压就可以了。
 **生成cloud-init配置**
 meta-data文件：
-```
+
+```sh
 instance-id:i-12345678
 ```
 
 user-data文件：
-```
+
+```sh
 #cloud-config
 password:redhat
 chpasswd:{expire:False}
@@ -37,13 +39,17 @@ ssh_authorized_keys:
   sudo:ALL=(ALL) NOPASSWD:ALL
   plain_text_passwd:'redhat'
 ```
+
 CentOS 7的云镜像默认用户是centos，没有提供默认密码，需要通过user-data的password指定，或者是通过ssh_authorized_keys给一个ssh的公钥，用于终端或者ssh登录。
 **生成config drive镜像**
+
 ```sh
 yum install -y cloud-utils cloud-localds seed.img user-data meta-data
 ```
+
 **创建虚拟机**
-```
+
+```xml
 <domain type='kvm'>
     <name>centos-cloud</name>
     <memory>1048576</memory>
