--- a/_posts/2018-2-13-关于加密程序员应该了解的那点事(1) - 对称加密与非对称加密.md
+++ b/_posts/2018-2-13-关于加密程序员应该了解的那点事(1) - 对称加密与非对称加密.md
@@ -13,7 +13,7 @@ tags: [区块链]
 
 OpenSSL采用AES256对称加解密test.cpp的示例：
 
-```
+```bash
 # 加密
 openssl enc -e -aes256 -in test.cpp -out test.cpp.enc
 
@@ -30,7 +30,7 @@ openssl enc -d -aes256 -in test.cpp.enc -out test.cpp
 
 一个比较简单获得密钥对的命令是ssh-keygen, 比如以下命令会生产mykey密钥对，私钥是mykey，公钥是mykey.pub。
 
-```
+```bash
 $ ssh-keygen -f ~/mykey
 Generating public/private rsa key pair.
 Enter passphrase (empty for no passphrase):
@@ -56,7 +56,7 @@ The key's randomart image is:
 
 OpenSSL采用非对称方式加密文件的示例：
 
-```
+```bash
 # 加密
 openssl rsautl -encrypt -inkey public_key.pem -pubin -in test.txt -out test.txt.enc
 
@@ -66,14 +66,14 @@ openssl rsautl -decrypt -inkey private_key.pem -in test.txt.enc -out test.txt
 
 值得注意的是，如果要加密的文件太大，上面的命令可能会抛出类似以下的错误：
 
-```
+```bash
 RSA operation error
 140735276269648:error:0406D06E:rsa routines:RSA_padding_add_PKCS1_type_2:data too large for key size:rsa_pk1.c:151:
 ```
 
 这个时候，我们可以采用稍微变通的思路: 
 
-```
+```bash
 # 1. 生成一个稍微复杂的乱序密码
 openssl rand -base64 64 > key.bin
 
