--- a/_posts/2018-2-8-关于CPU程序员应该知道的那些事.md
+++ b/_posts/2018-2-8-关于CPU程序员应该知道的那些事.md
@@ -31,7 +31,7 @@ add ecx, eax
 
 现代CPU都设计有多路(Port)执行单元, 有些执行单元专门用来处理ALU, 比如加，减等； 有些用来处理SIMD, 比如矩阵乘加等；由于Pipeline多路执行的机制，CPU每个Cycle不止执行一条指令，比如上面的Pipeline例子中，一共有6个Ports, 所以该CPU的理论IPC（Instruction Per Cycle）至少大于等于6，如果熟悉perf命令，我们可能会注意到类似下面输出的“insn per cycle”会大于1。
 
-```
+```bash
 [root@hubei ~]# perf stat sleep 1
 
  Performance counter stats for 'sleep 1':
