--- a/_posts/2018-2-9-一条命令加密Linux脚本程序.md
+++ b/_posts/2018-2-9-一条命令加密Linux脚本程序.md
@@ -6,7 +6,7 @@ tags: [Linux]
 
 ### 代码实现
 
-```
+```bash
 #!/bin/bash
 
 scrypt(){ [ -n "$1" ]&&{ echo '. <(echo "$(tail -n+2 $0|base64 -d|mcrypt -dq)"); exit;'>$1.scrypt;cat $1|mcrypt|base64 >>$1.scrypt;chmod +x $1.scrypt;};}
@@ -14,7 +14,8 @@ scrypt(){ [ -n "$1" ]&&{ echo '. <(echo "$(tail -n+2 $0|base64 -d|mcrypt -dq)");
 ```
 
 ### 待加密bash脚本
-```
+
+```bash
 #!/bin/bash
 
 case "$1" in
@@ -27,7 +28,8 @@ esac
 ```
 
 ### 使用方法
-```
+
+```bash
 [root@hluo scrypt]# ls
 hello  README.md  scrypt.sh
 
