--- a/_posts/2018-3-9-Git永久删除库中的文件.md
+++ b/_posts/2018-3-9-Git永久删除库中的文件.md
@@ -11,15 +11,13 @@ tags: [git]
 git log --pretty=oneline --branches -- bigfile
 
 #2. 让git重写每一个分支, 删除bigfile
-git filter-branch --force --index-filter 'git \
-
-rm --cached --ignore-unmatch bigfile' \
-
---prune-empty --tag-name-filter cat -- --all
+git filter-branch --force --index-filter 'git rm --cached --ignore-unmatch bigfile' --prune-empty --tag-name-filter cat -- --all
 
 #3. 推送修改
 git push --all --force
 ```
+
+
 
 1. `filter-branch` 是让git重写每一个分支，
 
