修改 云镜像 文章

--- a/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
+++ b/_posts/2018-1-17-云镜像：从此不再需要在虚拟机中安装操作系统.md
@@ -40,7 +40,8 @@ ssh_authorized_keys:
 CentOS 7的云镜像默认用户是centos，没有提供默认密码，需要通过user-data的password指定，或者是通过ssh_authorized_keys给一个ssh的公钥，用于终端或者ssh登录。
 **生成config drive镜像**
 ```sh
-yum install -y cloud-utils cloud-localds seed.img user-data meta-data
+yum install -y cloud-utils 
+cloud-localds seed.img user-data meta-data
 ```
 **创建虚拟机**
 ```
