更新2018-3-6文章，使用具体用例

--- a/_posts/2018-3-9-Git永久删除库中的文件.md
+++ b/_posts/2018-3-9-Git永久删除库中的文件.md
@@ -10,12 +10,12 @@ tags: [Linux]
 ### 解决办法
 
 ```bash
-#1. 确定文件从哪个commit引入的
-git log --pretty=oneline --branches -- bigfile
+#1. 确定文件从哪个commit引入的, 比如gitbooks/images/Thumbs.db
+git log --pretty=oneline --branches -- gitbooks/images/Thumbs.db
 
 #2. 让git重写每一个分支, 删除bigfile
 git filter-branch --force --index-filter \
-'git rm --cached --ignore-unmatch BIGFILE' \
+'git rm --cached --ignore-unmatch gitbooks/images/Thumbs.db' \
 --prune-empty --tag-name-filter cat -- --all
 
 #3. 推送修改
