更新文章标签

--- a/_posts/2018-1-16-Linux系统优化与调试之一: 是谁杀死了比尔.md
+++ b/_posts/2018-1-16-Linux系统优化与调试之一: 是谁杀死了比尔.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Linux系统优化与调试之一 - 是谁杀死了比尔
-categories: Linux
-tags: [Linux]
+categories: 系统优化
+tags: [系统优化]
 ---
 
 > 最近碰到一个棘手的问题，一台CentOS云主机的ip地址在运行一段时间后，总是莫名奇妙的消失，导致主机无法登录和访问，只能通过vnc控制台恢复，经过调查后发现，该主机的dhclient服务被杀掉，进一步研究ifup-eth代码发现，如果不设置**PERSISTENT_DHCLIENT**参数，那么dhclient服务启动的时候会默认采用-1参数，导致dhclient服务被杀死后，ip地址也随后被释放。
