--- a/_posts/2018-1-18-1分钟将CentOS 7 vim升级到8.0.md
+++ b/_posts/2018-1-18-1分钟将CentOS 7 vim升级到8.0.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 1分钟将CentOS 7 VIM升级到8.0
-tags: [Linux]
+tags: [VIM]
 ---
 
 > 2016年vim 8.0正式发布到现在已经很久了，很多新的vim插件对7.x版本的支持已经不是很好了，比如vim-go插件，我们可以通过下面两条命令快速把CentOS 7的vim升级到最新的8.x。
