--- a/_posts/2018-07-28-Linux系统优化与调试之四 : 云上云下的CPU频率.md
+++ b/_posts/2018-07-28-Linux系统优化与调试之四 : 云上云下的CPU频率.md
@@ -223,9 +223,30 @@ Intel将C-STAT和P-STAT设计用来帮助用户在功耗和性能上实现最佳
 * 如果实例可以控制P-STAT, 可以把能耗策略改成`performance`, 实现性能最大化;
 * 如果实例可以控制C-STAT, 可以在grub配置中加上`intel_idle.max_cstate=0`, 甚至进一步加上`idle=poll`，这样kernel会在idle状态的时候使用while(1)替代HLT，这样VM根本不会退出，实现应用延时最小化;
 
-### 虚拟化(KVM)和其它云实例的C-STAT/P-STAT
+### 虚拟化(KVM)和其它云实例的CPU频率
 
-当前upstream的KVM和Xen好像都还不能对VM呈现P-STAT, 登录阿里云和华为云的小规格实例，发现sysfs的cpufreq子模块都是不可用状态,所以在实例里既不能设置能耗策略，也不能动态调整频率，频率应该完全由host策略控制。
+当前upstream的KVM和Xen好像都还不能对VM呈现P-STAT, 登录国内某云服务器查看CPU频率，发现都运行在标称频率上:
+```
+[root@ecs-blog2 ~]# lscpu
+Architecture:          x86_64
+CPU op-mode(s):        32-bit, 64-bit
+Byte Order:            Little Endian
+CPU(s):                2
+On-line CPU(s) list:   0,1
+Thread(s) per core:    1
+Core(s) per socket:    2
+座：                 1
+NUMA 节点：         1
+厂商 ID：           GenuineIntel
+CPU 系列：          6
+型号：              63
+型号名称：        Intel(R) Xeon(R) CPU E5-2680 v3 @ 2.50GHz
+步进：              2
+CPU MHz：             2494.289
+BogoMIPS：            4988.55
+```
+
+另外，sysfs的cpufreq子模块都是不可用状态,所以在实例里既不能设置能耗策略，也不能动态调整频率，频率应该完全由host策略控制。
 
 ```
 [root@izr...]# cd /sys/devices/system/cpu && find .|grep cpufreq
@@ -235,9 +256,9 @@ Intel将C-STAT和P-STAT设计用来帮助用户在功耗和性能上实现最佳
 
 跟朋友一起翻看了下Linux对C-STAT支持的代码，我的理解是Linux会根据CPUID获取当前CPU能支持的C-STAT范围，然后填在EAX中作为参数调用MWAIT，CPU会根据这个参数选择进一个C-STAT（详情参见[参考(3)](https://mp.weixin.qq.com/s/n7ZGZ324mPwu6WttdQSMCw)）; KVM Upsteram在因为MWAIT退出后，会忽略掉这个参数，进入内核的reschedule, 所以`intel_idle.max_cstate=0`在其他公有云实例和KVM虚拟机上应该是没有作用。
 
-`idle=poll`这个参数值得说一下，现在的Hypervisor肯定没法捕获guest的这个行为，它通过在guest内核中使用spin来实现自身不会被其他虚拟机抢占，如果在guest中设置了这个参数，host上看vcpu进程的使用率会一直保持在接近100%，这是一种典型的损人利己做法，现在国内很多云实例都使用了超分配，但是CPU QoS可能还非常不完善。如果绝大部分租户都意识到这样损人利己的手段，那么这就是对他们的技术考验了:）
+`idle=poll`这个参数很有趣，现在的Hypervisor肯定没法捕获guest的这个行为，它通过在guest内核中使用spin来实现自身不会被其他虚拟机抢占，如果在guest中设置了这个参数，host上看vcpu进程的使用率会一直保持在接近100%，这是一种典型的损人利己做法，现在国内很多云实例都使用了超分配，但是CPU QoS可能还非常不完善。如果绝大部分租户都意识到这样损人利己的手段，那么这就是对他们的技术考验了:）
 
-我手上没有大规格的实例，我也没能从阿里云等其他云厂商官方文档找到P-STAT/C-STAT的任何说明，所以推测应该是不能开放给实例控制。俗话说，成败在于细节，从这个细节上大概也算是能看到差距吧。
+我手上没有大规格的实例，我也没能从其它云厂商官方文档找到P-STAT/C-STAT的任何说明，所以推测应该是不能开放给实例控制。俗话说，成败在于细节，从这个细节上大概也算是能看到差距吧。
 
 ### 参考
 - [AWS EC2 实例的处理器状态控制](https://docs.aws.amazon.com/zh_cn/AWSEC2/latest/UserGuide/processor_state_control.html)
