--- a/_posts/2019-01-30-深入理解Linux CPU使用率.md
+++ b/_posts/2019-01-30-深入理解Linux CPU使用率.md
@@ -201,7 +201,7 @@ Tasks: 131 total,  35 displayed                                                 
 
 ### Spinlock自旋锁
 
-CPU 一直在被使用，同时 IPC 也很高，但是应用逻辑上并没有任何进展，比如最近我们在冷存储服务器混部虚拟机的时候，有时候主机的sys占用特别高，oncpu火焰图发现CPU主要消耗在thp_poage_fault()导致的Spinlock中：
+CPU 一直在被使用，同时 IPC 也很高，但是应用逻辑上并没有任何进展，比如最近我们在冷存储服务器混部虚拟机的时候，有时候主机的sys占用特别高，On-CPU火焰图发现CPU主要消耗在thp_poage_fault()导致的Spinlock中：
 
 ![image](https://raw.githubusercontent.com/luohao-brian/luohao-brian.github.io/master/img/posts-2019/perf-qemu-20190124.png)
 
@@ -233,8 +233,8 @@ kernel: [646154.991909] EDAC MC3: 1 CE memory read error on CPU_SrcID#1_MC#1_Cha
 CPU 利用率已经开始成为一个容易误导的指标：它包含访存导致的等待周期，这样会影响一些新应用。也许 “%CPU” 应该重命名为 “%CYC”（cycles的缩写）。要清楚知道 “%CPU” 的含义，需要使用其他指标进行辅助, 比如:
 
 1. `IPC`: perf, tiptop...
-2. `SYS负载`: perf，oncpu火焰图...
-3. `主机监控状态`: MCE, THR, 频率...
+2. `SYS负载`: perf，On-CPU火焰图...
+3. `主机亚健康`: MCE, THR, 降频...
 
 ### 参考
 * [震惊，用了这么多年的 CPU 利用率，其实是错的](https://mp.weixin.qq.com/s?__biz=MzAwMDUwNDgxOA==&mid=2652665547&idx=1&sn=068e8e780d1c49dff8b648bbf52108c2&chksm=810f3056b678b9406a9d8ec12efc68ad1b1455fc04f1a4938ca50cafc0d8529ff4c61a552d9e&token=926519028&lang=zh_CN#rd)
